--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla",
+  "name": "frontend-boilerplate",
   "version": "1.0.0",
   "description": "## Getting Started * Clone this repository * Use`npm install` to get all required node modules * Use `gulp` to run default task * Start coding",
   "main": "gulpfile.js",
@@ -10,18 +10,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0"
   },
-  "devDependencies": {
-    "del": "^3.0.0",
-    "es5-ext": "^0.10.42",
-    "gulp": "^3.9.1",
-    "gulp-cache": "^0.4.6",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-imagemin": "^3.3.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.2",
-    "run-sequence": "^2.2.0"
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,7 +18,7 @@
     "type": "git",
     "url": "git+https://github.com/ryanjmack/frontend-boilerplate.git"
   },
-  "author": "",
+  "author": "Ryan Mack
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ryanjmack/frontend-boilerplate/issues"
